modifies image src

--- a/index.html
+++ b/index.html
@@ -163,77 +163,77 @@
 </div>
 
 <div class="col-sm-12 col-md-4 col-lg-3 movie-tile text-center" data-trailer-youtube-id="4A_X-Dvl0ws" data-toggle="modal" data-target="#trailer">
-    <img src="https://i.animepahe.ru/posters/278a7302aac06e4354ea98d30bf640890386c9627f65654820c6f91117ae8eb7.jpg" alt="Jujutsu Kaisen" class="tile-size img-thumbnail">
+    <img src="./images/jjk.jpg" alt="Jujutsu Kaisen" class="tile-size img-thumbnail">
     <h3>Jujutsu Kaisen</h3>
 </div>
 
 <div class="col-sm-12 col-md-4 col-lg-3 movie-tile text-center" data-trailer-youtube-id="LHtdKWJdif4" data-toggle="modal" data-target="#trailer">
-    <img src="https://i.animepahe.ru/posters/e2fc24e377888e7b983b3cf2beeef3f0.jpg" alt="Shingeki no Kyojin" class="tile-size img-thumbnail">
+    <img src="./images/snk.jpg" alt="Shingeki no Kyojin" class="tile-size img-thumbnail">
     <h3>Shingeki no Kyojin</h3>
 </div>
 
 <div class="col-sm-12 col-md-4 col-lg-3 movie-tile text-center" data-trailer-youtube-id="6vMuWuWlW4I" data-toggle="modal" data-target="#trailer">
-    <img src="https://i.animepahe.ru/posters/e7f7262505c87c37c2e17946ccea1edc1202289ccb99bf816fc8a109af1003a8.jpg" alt="Demon Slayer: Kimetsu no Yaiba" class="tile-size img-thumbnail">
+    <img src="./images/kmy.jpg" alt="Demon Slayer: Kimetsu no Yaiba" class="tile-size img-thumbnail">
     <h3>Demon Slayer: Kimetsu no Yaiba</h3>
 </div>
 
 <div class="col-sm-12 col-md-4 col-lg-3 movie-tile text-center" data-trailer-youtube-id="S8_YwFLCh4U" data-toggle="modal" data-target="#trailer">
-    <img src="https://i.animepahe.ru/posters/355e6e3127aa31f0d806114169b52c4fb6da4b87df7f9c1809b9e3de97b8aac5.jpg" alt="One Piece" class="tile-size img-thumbnail">
+    <img src="./images/onepiece.jpg" alt="One Piece" class="tile-size img-thumbnail">
     <h3>One Piece</h3>
 </div>
 
 <div class="col-sm-12 col-md-4 col-lg-3 movie-tile text-center" data-trailer-youtube-id="xniBk7zAKMY" data-toggle="modal" data-target="#trailer">
-    <img src="https://i.animepahe.ru/posters/84cac682459995dd57d639c0a072c1bc.jpg" alt="Baki" class="tile-size img-thumbnail">
+    <img src="./images/baki.jpg" alt="Baki" class="tile-size img-thumbnail">
     <h3>Baki</h3>
 </div>
 
 <div class="col-sm-12 col-md-4 col-lg-3 movie-tile text-center" data-trailer-youtube-id="uhlBqFj9kDw" data-toggle="modal" data-target="#trailer">
-    <img src="https://i.animepahe.ru/posters/e78bf21dfd4e382dbc985501edb0f57bda7d5305b87863fe8991a5e658c9c1a8.jpg" alt="Overlord" class="tile-size img-thumbnail">
+    <img src="./images/overlord.jpg" alt="Overlord" class="tile-size img-thumbnail">
     <h3>Overlord</h3>
 </div>
 
 <div class="col-sm-12 col-md-4 col-lg-3 movie-tile text-center" data-trailer-youtube-id="-G9BqkgZXRA" data-toggle="modal" data-target="#trailer">
-    <img src="https://i.animepahe.ru/posters/e3a01c608e389a61a1111d6b0e609dce.jpg" alt="Naruto" class="tile-size img-thumbnail">
+    <img src="./images/naruto.jpg" alt="Naruto" class="tile-size img-thumbnail">
     <h3>Naruto</h3>
 </div>
 
 <div class="col-sm-12 col-md-4 col-lg-3 movie-tile text-center" data-trailer-youtube-id="upx-_9-RjoE" data-toggle="modal" data-target="#trailer">
-    <img src="https://i.animepahe.ru/posters/e6405342438669fbec6a16aff7f97507.jpg" alt="Darker than Black: Kuro no Keiyakusha" class="tile-size img-thumbnail">
+    <img src="./images/dtb.jpg" alt="Darker than Black: Kuro no Keiyakusha" class="tile-size img-thumbnail">
     <h3>Darker than Black: Kuro no Keiyakusha</h3>
 </div>
 
 <div class="col-sm-12 col-md-4 col-lg-3 movie-tile text-center" data-trailer-youtube-id="xWKzbhAUeZE" data-toggle="modal" data-target="#trailer">
-    <img src="https://i.animepahe.ru/posters/6c20ae4b30a7a345eeb8d30d7336ed0c.jpg" alt="Samurai Champloo" class="tile-size img-thumbnail">
+    <img src="./images/samurai.jpg" alt="Samurai Champloo" class="tile-size img-thumbnail">
     <h3>Samurai Champloo</h3>
 </div>
 
 <div class="col-sm-12 col-md-4 col-lg-3 movie-tile text-center" data-trailer-youtube-id="e3Bqexemyfg" data-toggle="modal" data-target="#trailer">
-    <img src="https://i.animepahe.ru/posters/30c81a459b24ee25fd0f8721cce9a213.jpg" alt="Garo: Vanishing Line" class="tile-size img-thumbnail">
+    <img src="./images/garo.jpg" alt="Garo: Vanishing Line" class="tile-size img-thumbnail">
     <h3>Garo: Vanishing Line</h3>
 </div>
 
 <div class="col-sm-12 col-md-4 col-lg-3 movie-tile text-center" data-trailer-youtube-id="hRPHiQKJVk0" data-toggle="modal" data-target="#trailer">
-    <img src="https://i.animepahe.ru/posters/0b457aeab812d528814ab17d4defe1b0.jpg" alt="Fairy Tail" class="tile-size img-thumbnail">
+    <img src="./images/fairytail.jpg" alt="Fairy Tail" class="tile-size img-thumbnail">
     <h3>Fairy Tail</h3>
 </div>
 
 <div class="col-sm-12 col-md-4 col-lg-3 movie-tile text-center" data-trailer-youtube-id="v-AGjx0N24U" data-toggle="modal" data-target="#trailer">
-    <img src="https://i.animepahe.ru/posters/0e6849663a411e6f4796c9c8e896e750.jpg" alt="Code Geass: Hangyaku no Lelouch" class="tile-size img-thumbnail">
+    <img src="./images/codegeass.jpg" alt="Code Geass: Hangyaku no Lelouch" class="tile-size img-thumbnail">
     <h3>Code Geass: Hangyaku no Lelouch</h3>
 </div>
 
 <div class="col-sm-12 col-md-4 col-lg-3 movie-tile text-center" data-trailer-youtube-id="78ngg0SRlEI" data-toggle="modal" data-target="#trailer">
-    <img src="https://i.animepahe.ru/posters/ca4e9a20a5e5bd8b887801ab0246702f.jpg" alt="One Punch Man" class="tile-size img-thumbnail">
+    <img src="./images/opm.jpg" alt="One Punch Man" class="tile-size img-thumbnail">
     <h3>One Punch Man</h3>
 </div>
 
 <div class="col-sm-12 col-md-4 col-lg-3 movie-tile text-center" data-trailer-youtube-id="DgDBzAHg4wU" data-toggle="modal" data-target="#trailer">
-    <img src="https://i.animepahe.ru/posters/902247f518704ca809aa97141804f537.jpg" alt="Psycho-Pass" class="tile-size img-thumbnail">
+    <img src="./images/psycho.jpg" alt="Psycho-Pass" class="tile-size img-thumbnail">
     <h3>Psycho-Pass</h3>
 </div>
 
 <div class="col-sm-12 col-md-4 col-lg-3 movie-tile text-center" data-trailer-youtube-id="kgNkGohA20k" data-toggle="modal" data-target="#trailer">
-    <img src="https://i.animepahe.ru/posters/647f8397e8abaeedbadf5a6120f11da7.jpg" alt="Assassination Classroom" class="tile-size img-thumbnail">
+    <img src="./images/classroom.jpg" alt="Assassination Classroom" class="tile-size img-thumbnail">
     <h3>Assassination Classroom</h3>
 </div>
 
